After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737658 - fluiddec: segmentation fault when used with fakesrc
fluiddec: segmentation fault when used with fakesrc
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.4.3
Other Linux
: Normal normal
: 1.4.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-30 12:56 UTC by Antonio Ospite
Modified: 2014-10-14 07:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fluiddec segfault debug output (3.33 KB, text/x-log)
2014-09-30 12:58 UTC, Antonio Ospite
Details
fluiddec segfault backtrace (3.83 KB, text/x-log)
2014-09-30 12:58 UTC, Antonio Ospite
Details

Description Antonio Ospite 2014-09-30 12:56:57 UTC
Hi, this pipeline segfaults:

gst-launch-1.0 fakesrc ! fluiddec ! audioconvert ! autoaudiosink

The problem seems to be in fluiddec, I am going to attach the log and the backtrace.
Comment 1 Antonio Ospite 2014-09-30 12:58:01 UTC
Created attachment 287443 [details]
fluiddec segfault debug output
Comment 2 Antonio Ospite 2014-09-30 12:58:31 UTC
Created attachment 287444 [details]
fluiddec segfault backtrace
Comment 3 Tim-Philipp Müller 2014-10-01 00:13:07 UTC
commit 3953b8e4193789068a13c41fc0a022a4d29341f7
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Wed Oct 1 00:53:59 2014 +0100

    fluiddec: don't crash on 0-sized input buffers
    
    https://bugzilla.gnome.org/show_bug.cgi?id=737658