fluiddec: don't crash on 0-sized input buffers

https://bugzilla.gnome.org/show_bug.cgi?id=737658